@@ -16,7 +16,7 @@ Biarch: yes
 Depends:
     R (>= 3.2.0),
     Rcpp (>= 0.11.4),
-    htmlTable (>= 1.13)
+    htmlTable (>= 2.0.0)
 Imports:
     abind,
     checkmate,
