@@ -1,18 +1,18 @@
-#' Prepares a matrix for htmlTable from a list
+#' Prepares a matrix for \code{htmlTable} from a list
 #'
 #' By putting all the output from the \code{\link{getDescriptionStatsBy}}
-#' into a list, naming each element that we want in an rgroup we can
+#' into a list, naming each element that we want in an \code{rgroup} we can
 #' automatically merge everything and create an object ready for the
-#' htmlTable.
+#' \code{\link[htmlTable]{htmlTable}}.
 #'
 #' @section The \code{rgroup} value:
 #'
-#' The value for the rgroup is by default the name of the list element. If you have
+#' The value for the \code{rgroup} is by default the name of the list element. If you have
 #' passed a list without a name for that particular element or if you have passed a
 #' matrix it will look for a label set by the \pkg{Hmisc}\code{::\link[Hmisc]{label}} function.
-#' For those elements that have only one row no rgroup is set, and the naming sequence
+#' For those elements that have only one row no \code{rgroup} is set, and the naming sequence
 #' is the same as above but with an additional \code{\link[base]{rownames}} if the previous
-#' two turn out empty. All this behaviour is exemplified in the example.
+#' two turn out empty. All this behavior is exemplified in the example.
 #'
 #' The \code{rgroup} value can be overridden by simply specifying a custom rgroup when
 #' calling the \code{\link{htmlTable}} function.
@@ -25,17 +25,17 @@
 #' @param ... One or more elements coming from \code{\link{getDescriptionStatsBy}}.
 #'  You can also provide pure output from the \code{\link{getDescriptionStatsBy}} function
 #'  and have the function merge this together with the \code{...} argument.
-#'  \emph{Note} that all elements myst have the same \code{by} argument or you
+#'  \emph{Note} that all elements must have the same \code{by} argument or you
 #'  will not be able to merge it into a list.
 #' @param htmlTable_args Any arguments that should be passed to
 #'  \code{\link[htmlTable]{htmlTable}} function. The default is to remove
-#'  any css formatting for the rgroup.
+#'  any css formatting for the \code{rgroup}.
 #' @return \code{matrix} Returns a matrix object of class descList
 #' @export
 #' @example inst/examples/getDescriptionStatsBy_example.R
 #' @importFrom utils tail
 #' @family table functions
-mergeDesc <- function(..., htmlTable_args = list(css.rgroup = "")) {
+mergeDesc <- function(..., htmlTable_args = list()) {
   tlist <- list()
   dots <- list(...)
   if (length(dots) > 0) {
@@ -157,7 +157,7 @@ mergeDesc <- function(..., htmlTable_args = list(css.rgroup = "")) {
   if (length(pvals_rgroup) > 0) {
     attr(rgroup, "add") <- pvals_rgroup
   }
-  if (is.null(names(htmlTable_args))) {
+  if (length(htmlTable_args) > 0 && is.null(names(htmlTable_args))) {
     stop("The htmlTable_args has to be a list or a vector with named elements")
   }
   if (!is.list(htmlTable_args)) {
