@@ -1,5 +1,5 @@
 ---
-title: "The fastest way to compile your Table 1?"
+title: "Descriptives statistics for Table 1"
 author: "Max Gordon"
 date: "`r Sys.Date()`"
 output: 
@@ -18,9 +18,12 @@ We will use the mtcars dataset and compare the groups with automatic transmissio
 
 ```{r, message=FALSE}
 data(mtcars)
-# For labelling we use the label()
+# For labeling we use the label()
 # function from the Hmisc package
 library(Hmisc)
+
+# Style all the table output using htmlTable's theme handler
+htmlTable::setHtmlTableTheme(css.rgroup = "")
 
 label(mtcars$mpg) <- "Gas"
 units(mtcars$mpg) <- "Miles/(US) gallon"
@@ -28,7 +31,7 @@ units(mtcars$mpg) <- "Miles/(US) gallon"
 label(mtcars$wt) <- "Weight"
 units(mtcars$wt) <- "10<sup>3</sup> kg" # not sure the unit is correct
 
-mtcars$am <- factor(mtcars$am, levels=0:1, labels=c("Automatic", "Manual"))
+mtcars$am <- factor(mtcars$am, levels = 0:1, labels = c("Automatic", "Manual"))
 label(mtcars$am) <- "Transmission"
 
 mtcars$gear <- factor(mtcars$gear)
@@ -36,12 +39,12 @@ label(mtcars$gear) <- "Gears"
 
 # Make up some data for making it slightly more interesting
 mtcars$col <- factor(sample(c("red", "black", "silver"),
-                     size=NROW(mtcars), replace=TRUE))
+                     size = NROW(mtcars), replace = TRUE))
 label(mtcars$col) <- "Car color"
 ```
 
-The basics of getDescriptionStatsBy
-===================================
+The basics of `getDescriptionStatsBy`
+=====================================
 
 The function `getDescriptionStatsBy` is a simple way to do basic descriptive statistics. Mandatory inputs are the first two, *x* and *by*:
 
@@ -80,7 +83,7 @@ The dot-argument (...) is useful for adding additional customization:
 getTable1Stats(mtcars$mpg, use_units = TRUE)
 ```
 
-Magic with **mergeDesc**
+Magic with `mergeDesc`
 ========================
 
 In order to quickly assemble a "Table 1" I've generated a helper function `mergeDesc` that closely integrates with the `htmlTable`:
@@ -102,11 +105,9 @@ t1 <- c(t1,
         list(getTable1Stats(mtcars$gear)))
 
 mergeDesc(t1,
-          htmlTable_args = list(css.rgroup = "",
-                                caption  = "Basic descriptive statistics from the mtcars dataset",
+          htmlTable_args = list(caption  = "Basic descriptive statistics from the mtcars dataset",
                                 tfoot = "&dagger; The weight is in 10<sup>3</sup> kg"))
 ```
-
 
 I like generating lists but it is optional, you can achieve the same through:
 
@@ -115,8 +116,7 @@ mergeDesc(getTable1Stats(mtcars$mpg),
           `Weight&dagger;` = getTable1Stats(mtcars$wt),
           Color = getTable1Stats(mtcars$col),
           getTable1Stats(mtcars$gear),
-          htmlTable_args = list(css.rgroup = "",
-                                caption  = "Basic descriptive statistics from the mtcars dataset",
+          htmlTable_args = list(caption  = "Basic descriptive statistics from the mtcars dataset",
                                 tfoot = "&dagger; The weight is in 10<sup>3</sup> kg"))
 ```
 
@@ -150,8 +150,7 @@ t1[["Color"]] <-
 library(magrittr)
 mergeDesc(t1,
           getTable1Stats(mtcars$gear)) %>%
-  htmlTable(css.rgroup = "",
-            caption  = "Basic descriptive statistics from the mtcars dataset",
+  htmlTable(caption  = "Basic descriptive statistics from the mtcars dataset",
             tfoot = "&dagger; The weight is in 10<sup>3</sup> kg")
 ```
 
@@ -187,8 +186,7 @@ t1[["Color"]] <-
 
 mergeDesc(t1,
           getTable1Stats(mtcars$gear)) %>%
-  htmlTable(css.rgroup = "",
-            caption  = "P-values generated from a custom set of values",
+  htmlTable(caption  = "P-values generated from a custom set of values",
             tfoot = "&dagger; The weight is in 10<sup>3</sup> kg")
 ```
 
