@@ -8,6 +8,8 @@ Changes for 1.11.0
 * Added moveBox for moving boxGrob objects
 * Added alignVertical and alignHorizontal for aligning boxGrob objects
 * Added spreadVertival and spreadHorizontal for spreading boxGrob objects over the viewport
+* Styling of htmlTable removed due to the 2.0 api change, nbow. the css.rgroup should be set using set htmlTable::setHtmlTableTheme
+  or by passing the output thorugh htmlTable::addHtmlTableStyle.
 
 Changes for 1.10.0
 ------------------
